Deploy with now added

--- a/deck.mdx
+++ b/deck.mdx
@@ -38,6 +38,8 @@ export default Layout
 
 ![](https://raw.githubusercontent.com/reduxjs/redux/master/logo/logo-title-dark.png)
 
+## jossdz-redux.now.sh
+
 ---
 export default Split
 
